# vivid

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: audit.yml  next-build.yml  release.yml
docs/: index.html
scripts/: sync-version.mjs
src/: App.css  App.jsx  WorkspaceGate.jsx  i18n.js  main.jsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: calibrate.rs
src-tauri/icons/: icon.icns
src-tauri/src/: clip.rs  config.rs  emb_index.rs  lib.rs  logger.rs  main.rs  models.rs  siglip_clip.rs  workspace.rs
src-tauri/src/commands/: ai.rs  download.rs  export.rs  folders.rs  mod.rs  ocr.rs  sync.rs  text_completion.rs  thumbs.rs  tools.rs  upload.rs  upload_page.html  watch.rs  workspace_cmds.rs
src-tauri/src/db/: collections.rs  embeddings.rs  folders.rs  media.rs  mod.rs  stats.rs  tests.rs  trash.rs
src-tauri/swift/: vivid-helper.swift
src/components/common/: AiIndexProgress.jsx  AudioPlayer.css  AudioPlayer.jsx  AudioViewer.css  AudioViewer.jsx  CollectionAvatar.jsx  CollectionContextMenu.jsx  CollectionDragGhost.jsx  CommandPalette.css  CommandPalette.jsx  ContextMenu.css  ContextMenu.jsx  DownloadProgress.jsx  FilterBar.css  FilterBar.jsx  FolderTree.jsx  ImportMenu.css  ImportMenu.jsx  Modal.css  (+30 more)
src/hooks/: useCollectionDrag.js  useCustomScrollbar.js  useDismiss.js  useDisplayableSrc.js  useFolders.js  useImport.js  useMediaLibrary.js  useMultiSelect.js  useMultilingual.js  useNavHistory.js  useNotifications.js  useNotifications.test.js  usePersistentState.js  usePersistentState.test.js  useSync.js  useTabCompletion.js  useTheme.js  useToasts.js  useTools.js  useVideoSrc.js  useWindowFullscreen.js
src/locales/: de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pt.json  vi.json  zh-CN.json  zh-TW.json
src/stores/: downloadStore.js
src/test/: setup.js
src/utils/: cover.js  cover.test.js  folders.js  format.js  format.test.js  limits.js  path.js  path.test.js  search.js  search.test.js  sort.js  sort.test.js  timeline.js  timeline.test.js  translateTag.js  videoExtractQueue.js  workspace.js  zoomPan.js  zoomPan.test.js
(+81 files in other folders)
